# pwrctl

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  QOrderedMap.h  README.md  batterymanager.cpp  batterymanager.hpp  logindmanager.cpp  logindmanager.hpp  main.cpp  main.hpp  powerprofile.cpp  powerprofile.hpp  swayidlemanager.cpp  swayidlemanager.hpp
.chglog/: config.yml
.github/workflows/: release.yml
